--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "movie-app-1",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
@@ -8,7 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
-    "firebase": "^9.6.1",
+    "firebase": "^11.0.1",
+    "movie-app-1": "file:",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
